[package]
name = "sgx-panic-backtrace"
description = """
A small library for printing out panics and backtraces inside an SGX enclave
"""
version = "0.1.0"
authors = ["Philip Hayes"]
license = "MIT"
repository = "https://github.com/phlip9/sgx-panic-backtrace"
homepage = "https://github.com/phlip9/sgx-panic-backtrace"
readme = "README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace = { version = "0.3.65", default-features = false }
